crates/hydracache-db/tests/derive/fail_unknown_option.rs
use hydracache_db::HydraCacheEntity;

#[derive(HydraCacheEntity)]
#[hydracache(entity = "user", id = i64, table = "users")]
struct User;

fn main() {}
